<resources>
    <string name="app_name">Final project</string>

    <!-- <string name=""></string> -->
    <!-- -->

    <!-- MENU AND MISC-->
    <string name="Log_out">Log out</string>
    <string name="ActionBarUsername">Logged in as %1$s (%2$s)</string>

    <!-- LOGIN -->
    <!-- login frag -->
    <string name="App_logo">App logo</string>
    <string name="Quiz_app">Quiz app</string>

    <string name="Sign_in">Sign in</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="RegisterQuestion">Register?</string>

    <!-- onboarding frag -->
    <string name="Register">Register</string>
    <string name="Required_field">* required field</string>
    <string name="First_name">First name</string>
    <string name="Last_name">Last name</string>
    <string name="Email">Email</string>
    <string name="Cancel">Cancel</string>

    <!-- admin main frag -->
    <string name="Quizzes">Quizzes</string>
    <string name="Students">Students</string>

    <!-- quiz main fragment-->
    <string name="Quiz_title">(Quiz title)</string>
    <string name="Close">Close</string>
    <string name="Submit">Submit</string>
    <string name="Save">Save</string>

    <!-- particulars main fragment-->
    <string name="Edit_particulars">Edit particulars</string>
    <string name="Admin">Admin</string>
    <string name="Student">Student</string>
    <string name="Superuser">Superuser</string>
    <string name="Status">Status</string>

    <!-- scores main fragment -->
    <string name="Scores_prefix">Viewing scores for: %1$s</string>
    <string name="Username_prefix">Username: </string>
    <string name="Quiz_prefix">Quiz: </string>
    <string name="Score_prefix">Score: </string>

    <!-- quiz panel -->
    <string name="Edit">Edit</string>
    <string name="Publish">Publish</string>
    <string name="Scores">Scores</string>
    <string name="Delete">Delete</string>
    <string name="Finalized_prefix">Finalized: </string>
    <string name="Questions_prefix">Questions: </string>
    <string name="Total_marks_prefix">Total marks: </string>
    <string name="txtPanelQuizStats">Finalized: %1$s\n
        Number of questions: %2$s\n
        Attempts: %3$s\n
        Current high score: %4$s</string>
    <string name="Enter_link_of_image_to_add">Enter link of image to add: </string>

    <!-- student panel -->
    <string name="Username_temp">(Username)</string>
    <string name="txtStudentPanelUsername">%1$s (%2$s)</string>

    <!-- question panel -->
    <string name="Question">Question</string>
    <string name="Set_image">Set image</string>
    <string name="spacer">                  </string>

    <!-- add element panel -->
    <string name="Add">Add</string>

    <!-- -->
    <!-- <string name=""></string> -->

</resources>
