<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtStudentPanelUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Username_temp"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnStudentPanelEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Edit" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnStudentPanelScores"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Scores" />

            <Button
                android:id="@+id/btnStudentPanelDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Delete" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>