<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.cpan200.finalproject.user_fragments.FragScoresMain">

    <TextView
        android:id="@+id/txtScoresMainTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Scores_prefix"
        android:textSize="24sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtScoresMainUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Username_prefix" />

            <TextView
                android:id="@+id/txtScoresMainScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Score_prefix" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
